Inserito r4mvc. Credenziali condivise per nuget

--- a/Laboratorio2/NuGet.Config
+++ b/Laboratorio2/NuGet.Config
@@ -6,8 +6,8 @@
     </packageSources>
     <packageSourceCredentials>
         <github>
-            <add key="Username" value="FilippoVenturi23" />
-            <add key="ClearTextPassword" value="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" />
+            <add key="Username" value="CorsoUnibo-UomoMacchina" />
+            <add key="ClearTextPassword" value="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" />
         </github>
     </packageSourceCredentials>
 </configuration>
