--- a/Laboratorio3/Laboratorio3.Web/appsettings.json
+++ b/Laboratorio3/Laboratorio3.Web/appsettings.json
@@ -1,12 +1,15 @@
 {
     "Logging": {
         "LogLevel": {
-            "Default": "Information",
+            "Default": "Trace",
             "Microsoft.AspNetCore": "Warning"
         }
     },
     "AllowedHosts": "*",
     "AppSettings": {
         "DisabilitaControlloPassword": false
+
+        // ES2 Se avessimo un vero db
+        //"ConnectionString": "data source=server;initial catalog=db;User id=username;password=pw;Persist Security Info=True;MultipleActiveResultSets=true;APP=Laboratorio3"
     }
 }
