--- a/Laboratorio3/NuGet.Config
+++ b/Laboratorio3/NuGet.Config
@@ -2,12 +2,12 @@
 <configuration>
     <packageSources>
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
-        <add key="github" value="https://nuget.pkg.github.com/onitsmart/index.json" />
+        <!--<add key="github" value="https://nuget.pkg.github.com/onitsmart/index.json" />-->
     </packageSources>
-    <packageSourceCredentials>
+    <!--<packageSourceCredentials>
         <github>
             <add key="Username" value="CorsoUnibo-UomoMacchina" />
             <add key="ClearTextPassword" value="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" />
         </github>
-    </packageSourceCredentials>
+    </packageSourceCredentials>-->
 </configuration>
