--- a/Laboratorio4/Laboratorio4.Web/Laboratorio4.Web.csproj
+++ b/Laboratorio4/Laboratorio4.Web/Laboratorio4.Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>net8.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -20,14 +20,17 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.11" />
-      <PackageReference Include="R4Mvc" Version="1.0.0-alpha2-00395" />
-      <PackageReference Include="R4Mvc.Tools-alphavaleriob" Version="1.0.0-alphavaleriob-00395">
-        <PrivateAssets>all</PrivateAssets>
-        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
+      <PackageReference Include="SG4MVC" Version="0.9.4-beta" />
     </ItemGroup>
+
+	<ItemGroup Condition="'$(Configuration)' == 'Debug'">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="8.0.10" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<AssemblyAttribute Include="Sg4Mvc.GenerateSg4Mvc" />
+	</ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Laboratorio4\Laboratorio4.csproj" />
