Aggiunto commento in appsettings

--- a/Laboratorio4/Laboratorio4.Web/appsettings.json
+++ b/Laboratorio4/Laboratorio4.Web/appsettings.json
@@ -1,10 +1,14 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Trace",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
+  "Logging": {
+    // ES1-LogLevels: Modificando i valori sotto riportati, è possibile cambiare il livello di log per la nostra applicazione.
+    // I livelli di log sono: Trace, Debug, Information, Warning, Error...
+    // Potete, indicando come chiave un namespace, customizzare il logLevel per singoli namespace.
+    // Ad esempio, se volessi che il codice del nostro laboratorio loggasse solo errori, potrei scrivere "Laboratorio4.Web": "Error".
+    "LogLevel": {
+      "Default": "Trace",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
     "AllowedHosts": "*",
     "AppSettings": {
         "DisabilitaControlloPassword": false
